--- a/hire-developer-services.html
+++ b/hire-developer-services.html
@@ -54,7 +54,7 @@
 						</li>
 						<li class="megamenu">
 							<a href="how-we-work.html" class="menu-links">How we work</a>
-						  </li>
+						</li>
 						<li class="megamenu">
 							<a href="services.html" class="menu-links"> Services</a>
 						</li>
@@ -199,39 +199,39 @@
 	<section class="our-hiring-model ">
 		<div class="container">
 			<div class="title-block text-center">
-				<h2>Nos modèles d'embauche </h2>
+				<h2>Our hiring models </h2>
 				<div>
 					<p></p>
-					<p>Pour répondre aux divers besoins de projets pour toutes les tailles d'entreprise, Grafizen
-						propose des embauches à temps plein, à temps partiel et à l'heure pour des projets de
-						développement dédiés. Jetez un coup d'œil aux modèles d'engagement qui permettent de répondre à
-						diverses demandes commerciales.</p>
+					<p>To meet the diverse project needs of all sizes of business, Grafizen
+						offers full-time, part-time, and hourly hiring for construction projects.
+						dedicated development. Take a look at engagement models that help meet your
+						various commercial requests.</p>
 					<p></p>
 				</div>
 			</div>
 			<div class="work-block">
 				<div class="working-time">
-					<h3> À plein temps </h3>
+					<h3> Full time </h3>
 					<div class="working-day">
-						<p>8 heures/jour</p>
+						<p>8 hours/day</p>
 						<span class="bullet-point"></span>
-						<p>5 jours/semaine</p>
+						<p>5 days/week</p>
 					</div>
 				</div>
 				<div class="working-time">
-					<h3>À temps partiel</h3>
+					<h3>Part-time</h3>
 					<div class="working-day">
-						<p>4 heures/jour</p>
+						<p>4 hours/day</p>
 						<span class="bullet-point"></span>
-						<p>5 jours/semaine</p>
+						<p>5 days/week</p>
 					</div>
 				</div>
 				<div class="working-time">
-					<h3> Base horaire</h3>
+					<h3> Hourly basis</h3>
 					<div class="working-day">
-						<p>Commence avec 40 heures</p>
+						<p>Starts with 40 hours</p>
 						<span class="bullet-point"></span>
-						<p>Payez au fur et à mesure</p>
+						<p>Pay as you go</p>
 					</div>
 				</div>
 			</div>
@@ -242,34 +242,34 @@
 							<div class="services-icon">
 								<img src="./images/icons/ic-hire-model-onsite-team-1.svg" height="48" width="48" alt="">
 							</div>
-							<h3>Équipe dédiée sur place</h3>
-							<p> Nous proposons des services de dotation sur site pour combler les lacunes du cycle de
-								développement. Notre présence sur les sites clients peut être temporaire, fréquente ou à
-								temps plein pendant le cycle de développement.</p>
+							<h3>Dedicated team on site</h3>
+							<p>We offer on-site staffing services to fill gaps in the life cycle
+								development. Our presence on customer sites may be temporary, frequent or
+								full-time during the development cycle.</p>
 						</div>
 						<div class="col-12 col-md-12 col-lg-4 mobile-app-col">
 							<div class="services-icon">
 								<img src="./images/icons/ic-hire-model-offsite-team.svg" height="48" width="48" alt="">
 							</div>
-							<h3> Équipe dédiée hors site </h3>
-							<p> Sélectionnez des développeurs parmi nous et créez votre propre équipe pour démarrer le
-								projet le plus rapidement possible. Ayez un contrôle total sur l'équipe avec une
-								consultation d'experts via une équipe cloud.</p>
+							<h3> Dedicated off-site team </h3>
+							<p>Select developers from us and create your own team to start the
+								project as soon as possible. Have total control over the team with a
+								expert consultation via cloud team.</p>
 						</div>
 						<div class="col-12 col-md-12 col-lg-4 mobile-app-col">
 							<div class="services-icon">
-								<img src="./images/icons/ic-hire-model-product-developement-team.svg" height="45"
+								<img src="./images/icons/ic-hire-model-product-development-team.svg" height="45"
 									width="48" alt="">
 							</div>
-							<h3>Équipe de développement de produits</h3>
-							<p> Il ne s'agit que d'élargir votre propre équipe avec nos experts approuvés qui offrent
-								une assistance pour votre produit afin de le publier avec succès grâce à la coordination
-								des aspects techniques et du flux de processus.</p>
+							<h3>Product Development Team</h3>
+							<p>It's all about expanding your own team with our vetted experts who offer
+								support for your product to successfully release it through coordination
+								technical aspects and process flow.</p>
 						</div>
 					</div>
 					<!-- <div class="button-box text-center">
-					<a class="btn-orange" href="#">Hire a Dedicated Team</a>
-				 </div> -->
+		<a class="btn-orange" href="#">Hire a Dedicated Team</a>
+		</div> -->
 				</div>
 			</div>
 		</div>
@@ -279,52 +279,52 @@
 	<section class="dedicated-advantages-sec sec-pad text-center">
 		<div class="container">
 			<div class="title-block">
-				<p class="sub-title">POURQUOI LES GENS NOUS CHOISISSENT-ILS?</p>
-				<h2>Avantages d'embaucher des développeurs @Garfizen Paris</h2>
+				<p class="sub-title">WHY DO PEOPLE CHOOSE US?</p>
+				<h2>Advantages of hiring @Garfizen Paris developers</h2>
 			</div>
 			<div class="hiring-model-sec text-left">
 				<div class="row">
 					<div class="col-sm-12 col-md-6 col-lg-4 mt-4">
 						<img src="./images/icons/ic-direct-communication.svg" height="48" width="48" alt="">
-						<h3>Communication directe</h3>
-						<p>Vous aurez un accès complet pour parler avec les développeurs choisis à tout moment via
-							Skype, e-mail et téléphone avec des conférences audio/vidéo programmées pour surmonter la
-							barrière de communication.</p>
+						<h3>Direct communication</h3>
+						<p>You will have full access to speak with chosen developers at any time via
+							Skype, email and telephone with scheduled audio/video conferences to overcome the
+							communication barrier.</p>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4 mt-4">
 						<img src="./images/icons/ic-your-team.svg" height="48" width="48" alt="">
-						<h3>Votre équipe, votre sélection</h3>
-						<p>Choisissez votre propre équipe de développeurs grâce à un processus de sélection et
-							d'entretiens contrôlé. Nous vous présentons les CV des candidats les plus sélectionnés parmi
-							ceux qui choisissent.</p>
+						<h3>Your team, your selection</h3>
+						<p>Choose your own team of developers through a selection process and
+							controlled interviews. We present to you the CVs of the most selected candidates among
+							those who choose.</p>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4 mt-4">
 						<img src="./images/icons/ic-zero-investment.svg" height="48" width="37" alt="">
-						<h3>ZÉRO investissement initial</h3>
-						<p>Nous vous aiderons à intégrer votre propre équipe de développement avec un coût initial ZÉRO
-							compte tenu de l'infrastructure, de l'embauche et de la dotation en personnel. Vous n'aurez
-							qu'à payer pour la période d'engagement avec nous.</p>
+						<h3>ZERO initial investment</h3>
+						<p>We'll help you onboard your own development team with ZERO upfront cost
+							considering infrastructure, hiring and staffing. You won't have
+							only to pay for the period of engagement with us.</p>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4 mt-4">
 						<img src="./images/icons/ic-project-control.svg" height="48" width="48" alt="">
-						<h3>Contrôle de projet à 100%</h3>
-						<p>Vous aurez un contrôle total sur les experts en logiciels embauchés par IndiaNIC. Ils
-							travailleront directement avec vous ou votre équipe pour planifier, développer et livrer le
-							produit qui répond aux besoins de l'entreprise.</p>
+						<h3>100% project control</h3>
+						<p>You will have full control over the software experts hired by IndiaNIC. They
+							will work directly with you or your team to plan, develop and deliver the
+							product that meets the needs of the company.</p>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4 mt-4">
 						<img src="./images/icons/ic-plug-n-play.svg" height="48" width="48" alt="">
-						<h3>Branchez et jouez</h3>
-						<p>Construisez votre équipe virtuellement en un rien de temps. Vous avez la possibilité
-							d'augmenter et de réduire l'équipe en fonction des besoins via un avis juste un mois avant,
-							afin d'optimiser les coûts et l'engagement par ressource.</p>
+						<h3>Plug and play</h3>
+						<p>Build your team virtually in no time. You have the possibility
+							to increase and reduce the team according to the needs via a notice just one month before,
+							in order to optimize costs and commitment per resource.</p>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4 mt-4">
 						<img src="./images/icons/ic-transparent-ecosystem.svg" height="48" width="45" alt="">
-						<h3>Écosystème transparent</h3>
-						<p> Nous maintenons l'intégrité avec tous nos clients pour offrir la meilleure expérience avec
-							une vision de relation d'affaires à long terme. Nous offrons des rapports sur une base
-							quotidienne, hebdomadaire et mensuelle pour aider les clients à planifier la version.</p>
+						<h3>Transparent ecosystem</h3>
+						<p>We maintain integrity with all of our customers to provide the best experience with
+							a vision of a long-term business relationship. We provide reports on a basis
+							daily, weekly and monthly to help customers plan the release.</p>
 					</div>
 				</div>
 			</div>
@@ -337,9 +337,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-7 text-center">
 					<div class="page-headings">
-						<h2>Notre expertise </h2>
-						<p class="mt15">clé Explorez notre gamme de prouesses dans la conception et le développement de
-							sites Web</p>
+						<h2>Our expertise </h2>
+						<p class="mt15">key Explore our range of prowess in the design and development of
+							websites</p>
 					</div>
 				</div>
 			</div>
@@ -348,64 +348,64 @@
 					<div class="ree-card  mt60">
 						<div class="ree-card-img"><img src="images/icons/mobile-app.svg" alt="services"> </div>
 						<div class="ree-card-content mt40">
-							<h3 class="mb15"> Développement d'Application </h3>
-							<p>Notre éditeur de logiciels a été reconnu par Google pour la qualité exceptionnelle de ses
-								applications Android.</p>
+							<h3 class="mb15">Application Development</h3>
+							<p>Our software publisher has been recognized by Google for the exceptional quality of its
+								android apps.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-sm-6">
-					<div class="ree-card  mt60">
+					<div class="ree-card mt60">
 						<div class="ree-card-img"><img src="images/icons/website.svg" alt="services"> </div>
 						<div class="ree-card-content mt40">
-							<h3 class="mb15">Développement Web</h3>
-							<p>Chez Grafizen Ventures, nous offrons des services de conception de sites Web réactifs au
-								pixel près qui sont construits autour de l'esthétique et de la convivialité.</p>
+							<h3 class="mb15">Web Development</h3>
+							<p>At Grafizen Ventures, we offer responsive web design services to the
+								pixel-perfect that are built around aesthetics and usability.</p>
 						</div>
 
 					</div>
 				</div>
 				<div class="col-lg-4 col-sm-6">
-					<div class="ree-card  mt60">
+					<div class="ree-card mt60">
 						<div class="ree-card-img"><img src="images/icons/buy-online.svg" alt="services"> </div>
 						<div class="ree-card-content mt40">
-							<h3 class="mb15">Service de commerce électronique</h3>
-							<p>Les services de conception de produits de Grafizen Ventures couvrent l'ensemble du cycle
-								de vie de la conception du produit, du prototypage à la conception entièrement
-								fonctionnelle.</p>
+							<h3 class="mb15">E-commerce service</h3>
+							<p>Grafizen Ventures' product design services span the entire cycle
+								product design life, from prototyping to full design
+								functional.</p>
 						</div>
 
 					</div>
 				</div>
 				<div class="col-lg-4 col-sm-6">
-					<div class="ree-card  mt60">
+					<div class="ree-card mt60">
 						<div class="ree-card-img"><img src="images/icons/communicate.svg" alt="services"> </div>
 						<div class="ree-card-content mt40">
-							<h3 class="mb15"> Le Marketing numérique</h3>
-							<p>Augmentez les conversions. Augmentez les prospects. Augmenter les ventes . Augmenter le
-								revenu . Ce sont les services de marketing numérique de Grafizen Ventures.</p>
+							<h3 class="mb15">Digital Marketing</h3>
+							<p>Increase conversions. Increase leads. To increase the sales . Increase
+								income . These are the digital marketing services of Grafizen Ventures.</p>
 						</div>
 
 					</div>
 				</div>
 				<div class="col-lg-4 col-sm-6">
-					<div class="ree-card  mt60">
+					<div class="ree-card mt60">
 						<div class="ree-card-img"><img src="images/icons/design-tools.svg" alt="services"> </div>
 						<div class="ree-card-content mt40">
-							<h3 class="mb15"> La conception des produits </h3>
-							<p>Nos designers hautement expérimentés comprennent votre vision et vos objectifs
-								commerciaux afin de créer les designs.</p>
+							<h3 class="mb15"> Product design </h3>
+							<p>Our highly experienced designers understand your vision and goals
+								to create the designs.</p>
 						</div>
 
 					</div>
 				</div>
 				<div class="col-lg-4 col-sm-6">
-					<div class="ree-card  mt60">
+					<div class="ree-card mt60">
 						<div class="ree-card-img"><img src="images/icons/servers.svg" alt="services"> </div>
 						<div class="ree-card-content mt40">
-							<h3 class="mb15"> Services Infonuagiques</h3>
-							<p>Nos designers hautement expérimentés comprennent votre vision et vos objectifs
-								commerciaux afin de créer les designs.</p>
+							<h3 class="mb15">Cloud Services</h3>
+							<p>Our highly experienced designers understand your vision and goals
+								to create the designs.</p>
 						</div>
 
 					</div>
@@ -423,15 +423,14 @@
 				<div class="row">
 					<div class="col-lg-6 vcenter">
 						<div class="cta-heading">
-							<h2 class="mb15">Embaucher de classe mondiale <span
-									class="ree-text rt40">développeuses</span> pour votre <span
-									class="ree-text rt40">projet</span> </h2>
-							<p>Nous avons une équipe de dextérité de concepteurs et de développeurs qui travaille
-								parfaitement sur les projets des clients et livre le projet dans les délais.</p>
+							<h2 class="mb15">Hire World Class <span class="ree-text rt40">developers</span> for your
+								<span class="ree-text rt40">project</span> </h2>
+							<p>We have a dexterous team of designers and developers working
+								perfectly on clients' projects and delivers the project on time.</p>
 							<div class="mult-btns">
-								<a href="contactus.html" class="ree-btn  ree-btn-grdt1 mt40">Parlez à nos experts <i
+								<a href="contactus.html" class="ree-btn ree-btn-grdt1 mt40">Talk to our experts <i
 										class="fas fa-arrow-right fa-btn"></i></a>
-								<span class="or">ou</span>
+								<span class="or">or</span>
 								<a href="tel:+33749730877" class="mt40 call-us">Appelez-Nous +33 7 49 73 08 77</a>
 							</div>
 						</div>
@@ -847,18 +846,18 @@
 								<h5 class="service-sub-heading"><a href="app-dev-service-details.html">App
 										Developement</a></h5>
 								<ul class="footer-links-list">
-									<li><a href="app-dev-service-details.html#iosAppService">Développement
-											d'applications iOS</a></li>
-									<li><a href="app-dev-service-details.html#androidAppService">Développement
-											d'applications Android</a></li>
-									<li><a href="app-dev-service-details.html#muliplatformAppService">Applications
-											multiplateformes</a></li>
-									<li><a href="app-dev-service-details.html#cloudAppService">Applications mobiles
-											pilotées par le cloud</a></li>
-									<li><a href="app-dev-service-details.html#hybrideAppService">Développement
-											d'applications hybrides </a></li>
-									<li><a href="app-dev-service-details.html#pwdDevService">Développement
-											d'applications Web progressives (PWA) </a></li>
+									<li><a href="app-dev-service-details.html#iosAppService">Development
+											iOS apps</a></li>
+									<li><a href="app-dev-service-details.html#androidAppService">Development
+											Android apps</a></li>
+									<li><a href="app-dev-service-details.html#muliplatformAppService">Apps
+											cross-platform</a></li>
+									<li><a href="app-dev-service-details.html#cloudAppService">Mobile Apps
+											cloud-driven</a></li>
+									<li><a href="app-dev-service-details.html#hybridAppService">Development
+											of hybrid applications </a></li>
+									<li><a href="app-dev-service-details.html#pwdDevService">Development
+											Progressive Web Apps (PWA) </a></li>
 								</ul>
 							</div>
 							<div class="col-md-3">
@@ -866,14 +865,14 @@
 										Developement</a></h5>
 								<ul class="footer-links-list">
 									<li><a href="web-dev-service-details.html#solutionEntreprise">Solutions
-											d'entreprise</a></li>
-									<li><a href="web-dev-service-details.html#eCommerce">Commerce électronique</a></li>
-									<li><a href="web-dev-service-details.html#backendApi">Back-end mobile et API</a>
+											business</a></li>
+									<li><a href="web-dev-service-details.html#eCommerce">E-Commerce</a></li>
+									<li><a href="web-dev-service-details.html#backendApi">Mobile backend and API</a>
 									</li>
-									<li><a href="web-dev-service-details.html#cms">Système de gestion de contenu</a>
+									<li><a href="web-dev-service-details.html#cms">Content Management System</a>
 									</li>
-									<li><a href="web-dev-service-details.html#customDevelopment">Développement Web
-											personnalisé</a></li>
+									<li><a href="web-dev-service-details.html#customDevelopment">Web Development
+											custom</a></li>
 								</ul>
 							</div>
 							<div class="col-md-3">
@@ -938,8 +937,8 @@
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 								</div>
-								<h6 class="mt10">La note globale des clients est de 4.9 sur 865 Clients pour Grafizen
-									Ventures - Paris</h6>
+								<h6 class="mt10">The overall customer rating is 4.9 out of 865 Customers for Grafizen
+Ventures - Paris</h6>
 							</div>
 						</div>
 						<div class="col-lg-6 vcenter">
