--- a/uiux-services.html
+++ b/uiux-services.html
@@ -688,18 +688,18 @@ innovation.
 								<h5 class="service-sub-heading"><a href="app-dev-service-details.html">App
 										Developement</a></h5>
 								<ul class="footer-links-list">
-									<li><a href="app-dev-service-details.html#iosAppService">Développement
-											d'applications iOS</a></li>
-									<li><a href="app-dev-service-details.html#androidAppService">Développement
-											d'applications Android</a></li>
-									<li><a href="app-dev-service-details.html#muliplatformAppService">Applications
-											multiplateformes</a></li>
-									<li><a href="app-dev-service-details.html#cloudAppService">Applications mobiles
-											pilotées par le cloud</a></li>
-									<li><a href="app-dev-service-details.html#hybrideAppService">Développement
-											d'applications hybrides </a></li>
-									<li><a href="app-dev-service-details.html#pwdDevService">Développement
-											d'applications Web progressives (PWA) </a></li>
+									<li><a href="app-dev-service-details.html#iosAppService">Development
+iOS apps</a></li>
+<li><a href="app-dev-service-details.html#androidAppService">Development
+Android apps</a></li>
+<li><a href="app-dev-service-details.html#muliplatformAppService">Apps
+cross-platform</a></li>
+<li><a href="app-dev-service-details.html#cloudAppService">Mobile Apps
+cloud-driven</a></li>
+<li><a href="app-dev-service-details.html#hybridAppService">Development
+of hybrid applications </a></li>
+<li><a href="app-dev-service-details.html#pwdDevService">Development
+Progressive Web Apps (PWA) </a></li>
 								</ul>
 							</div>
 							<div class="col-md-3">
@@ -707,14 +707,14 @@ innovation.
 										Developement</a></h5>
 								<ul class="footer-links-list">
 									<li><a href="web-dev-service-details.html#solutionEntreprise">Solutions
-											d'entreprise</a></li>
-									<li><a href="web-dev-service-details.html#eCommerce">Commerce électronique</a></li>
-									<li><a href="web-dev-service-details.html#backendApi">Back-end mobile et API</a>
-									</li>
-									<li><a href="web-dev-service-details.html#cms">Système de gestion de contenu</a>
-									</li>
-									<li><a href="web-dev-service-details.html#customDevelopment">Développement Web
-											personnalisé</a></li>
+business</a></li>
+<li><a href="web-dev-service-details.html#eCommerce">E-Commerce</a></li>
+<li><a href="web-dev-service-details.html#backendApi">Mobile backend and API</a>
+</li>
+<li><a href="web-dev-service-details.html#cms">Content Management System</a>
+</li>
+<li><a href="web-dev-service-details.html#customDevelopment">Web Development
+custom</a></li>
 								</ul>
 							</div>
 							<div class="col-md-3">
@@ -779,8 +779,8 @@ innovation.
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 								</div>
-								<h6 class="mt10">La note globale des clients est de 4.9 sur 865 Clients pour Grafizen
-									Ventures - Paris</h6>
+								<h6 class="mt10">The overall customer rating is 4.9 out of 865 Customers for Grafizen
+Ventures - Paris</h6>
 							</div>
 						</div>
 						<div class="col-lg-6 vcenter">
