--- a/web-dev-service-details.html
+++ b/web-dev-service-details.html
@@ -1043,7 +1043,7 @@
 						<div class="ree-card-img"><img src="images/icons/communicate.svg" alt="services"> </div>
 						<div class="ree-card-content mt40">
 							<h3 class="mb15">Digital Marketing</h3>
-							<p>Increase conversions. Increase leads. To increase the sales . Increase income. 
+							<p>Increase conversions. Increase leads. To increase the sales . Increase income.
 								These are the digital marketing services of Grafizen Ventures.</p>
 						</div>
 
@@ -1083,9 +1083,9 @@
 				<div class="row">
 					<div class="col-lg-6 vcenter">
 						<div class="cta-heading">
-							<h2 class="mb15">Hire world class <span
-									class="ree-text rt40">developers</span> for your <span
-									class="ree-text rt40">projet</span> </h2>
+							<h2 class="mb15">Hire world class <span class="ree-text rt40">developers</span> for your
+								<span class="ree-text rt40">projet</span>
+							</h2>
 							<p>We have a dexterity team of designers & developers that works on clients projects
 								excellently and delivers the project on timeline.</p>
 							<div class="mult-btns">
@@ -1127,7 +1127,8 @@
 								<img src="images/icons/pencil.svg" alt="service" class="icon70 mb20">
 							</div>
 							<h4>Requirement Gathering</h4>
-							<p>Therefore metus lorem, vulputate and sapien sit amet, auctor iaculis lorem. In vel hendrerit
+							<p>Therefore metus lorem, vulputate and sapien sit amet, auctor iaculis lorem. In vel
+								hendrerit
 								nisi. </p>
 						</div>
 					</div>
@@ -1505,18 +1506,18 @@
 								<h5 class="service-sub-heading"><a href="app-dev-service-details.html">App
 										Developement</a></h5>
 								<ul class="footer-links-list">
-									<li><a href="app-dev-service-details.html#iosAppService">Développement
-											d'applications iOS</a></li>
-									<li><a href="app-dev-service-details.html#androidAppService">Développement
-											d'applications Android</a></li>
-									<li><a href="app-dev-service-details.html#muliplatformAppService">Applications
-											multiplateformes</a></li>
-									<li><a href="app-dev-service-details.html#cloudAppService">Applications mobiles
-											pilotées par le cloud</a></li>
-									<li><a href="app-dev-service-details.html#hybrideAppService">Développement
-											d'applications hybrides </a></li>
-									<li><a href="app-dev-service-details.html#pwdDevService">Développement
-											d'applications Web progressives (PWA) </a></li>
+									<li><a href="app-dev-service-details.html#iosAppService">Development
+											iOS apps</a></li>
+									<li><a href="app-dev-service-details.html#androidAppService">Development
+											Android apps</a></li>
+									<li><a href="app-dev-service-details.html#muliplatformAppService">Apps
+											cross-platform</a></li>
+									<li><a href="app-dev-service-details.html#cloudAppService">Mobile Apps
+											cloud-driven</a></li>
+									<li><a href="app-dev-service-details.html#hybridAppService">Development
+											of hybrid applications </a></li>
+									<li><a href="app-dev-service-details.html#pwdDevService">Development
+											Progressive Web Apps (PWA) </a></li>
 								</ul>
 							</div>
 							<div class="col-md-3">
@@ -1524,14 +1525,14 @@
 										Developement</a></h5>
 								<ul class="footer-links-list">
 									<li><a href="web-dev-service-details.html#solutionEntreprise">Solutions
-											d'entreprise</a></li>
-									<li><a href="web-dev-service-details.html#eCommerce">Commerce électronique</a></li>
-									<li><a href="web-dev-service-details.html#backendApi">Back-end mobile et API</a>
+											business</a></li>
+									<li><a href="web-dev-service-details.html#eCommerce">E-Commerce</a></li>
+									<li><a href="web-dev-service-details.html#backendApi">Mobile backend and API</a>
 									</li>
-									<li><a href="web-dev-service-details.html#cms">Système de gestion de contenu</a>
+									<li><a href="web-dev-service-details.html#cms">Content Management System</a>
 									</li>
-									<li><a href="web-dev-service-details.html#customDevelopment">Développement Web
-											personnalisé</a></li>
+									<li><a href="web-dev-service-details.html#customDevelopment">Web Development
+											custom</a></li>
 								</ul>
 							</div>
 							<div class="col-md-3">
@@ -1596,8 +1597,8 @@
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 								</div>
-								<h6 class="mt10">La note globale des clients est de 4.9 sur 865 Clients pour Grafizen
-									Ventures - Paris</h6>
+								<h6 class="mt10">The overall customer rating is 4.9 out of 865 Customers for Grafizen
+Ventures - Paris</h6>
 							</div>
 						</div>
 						<div class="col-lg-6 vcenter">
@@ -1632,7 +1633,6 @@
 		</div>
 	</footer>
 	<!-- end footer -->
-
 	<!--All js files-->
 	<script src="js/modernizr-3.5.0.min.js"></script>
 	<script src="js/jquery-3.6.0.min.js"></script>
