--- a/.html
+++ b/.html
@@ -65,7 +65,7 @@
 										<div class="container">
 											<div class="menu-extra-info-inner">
 												<ul>
-													<li>Paris
+													<li>
 														<div class="menu-icon-ree">
 															<div class="webiocon"> <i class="far fa-envelope"></i>
 															</div>
@@ -277,7 +277,7 @@
 					<div class="page-headings service-page">
 						<span class="sub-heading mb15" data-aos="fade-in" data-aos-delay="200">OUR SERVICES</span>
 						<h1 data-aos="fade-in" data-aos-delay="400"><span class="ree-text rt45">
-								Grafizen Paris</span>,A web development agency in France where the experience
+								Grafizen Ventures</span>,A web development agency in France where the experience
 							meets innovation.</h1>
 						<p class="mt30 h-light" data-aos="fade-in" data-aos-delay="600">
 							We are a team of top talent providing enterprise solutions to
