--- a/app-dev-service-details.html
+++ b/app-dev-service-details.html
@@ -1320,7 +1320,7 @@
 									<span class="fa fa-star checked"></span>
 								</div>
 								<h6 class="mt10">The overall client rating is 4.9 out of 865 Clients for Grafizen
-									Ventures - Paris</h6>
+									Ventures - India</h6>
 							</div>
 						</div>
 						<div class="col-lg-6 vcenter">
