--- a/how-we-work.html
+++ b/how-we-work.html
@@ -976,7 +976,7 @@
 					  <span class="fa fa-star checked"></span>
 					  <span class="fa fa-star checked"></span>
 					</div>
-					<h6 class="mt10">La note globale des clients est de 4.9 sur 865 Clients pour Grafizen Ventures - Paris</h6>
+					<h6 class="mt10">The overall client rating is 4.9 out of 865 Clients for Grafizen Ventures - Paris</h6>
 				  </div>
 				</div>
 				<div class="col-lg-6 vcenter">
