--- a/uiux-services.html
+++ b/uiux-services.html
@@ -157,7 +157,7 @@
 					<div class="page-headings service-page">
 						<span class="sub-heading mb15" data-aos="fade-in" data-aos-delay="200">OUR SERVICES</span>
 						<h1 data-aos="fade-in" data-aos-delay="400"><span class="ree-text rt45" >
-							Grafizen Paris</span>, Ui-Ux Service page.</h1>
+							Grafizen Ventures</span>, Ui-Ux Service page.</h1>
 						<p class="mt30 h-light" data-aos="fade-in" data-aos-delay="600">
 							We are a team of top talent providing enterprise solutions globally.
 we evolve with the advancement of technology because we believe in making our technology your
