--- a/web-dev-service-details.html
+++ b/web-dev-service-details.html
@@ -176,10 +176,10 @@
 							TOP RATED WEB DEVELOPMENT</span>
 						<h1 data-aos="fade-up" data-aos-delay="400">Company of <span class="ree-text rt45">development
 								Web </span> website</h1>
-						<p class="mt20 h-light" data-aos="fade-up" data-aos-delay="400">grafizen paris is a leading web
+						<p class="mt20 h-light" data-aos="fade-up" data-aos-delay="400">grafizen ventures is a leading web
 							design and development company in India, USA, Canada and UAE, offering best web development
 							services to create bespoke websites, web applications, web tools, etc.
-							Grafizen Paris is a leading web design and development company in
+							Grafizen Ventures is a leading web design and development company in
 							India, USA, Canada and UAE, offering the best services
 							web development to create bespoke websites, web applications, tools
 							Web, etc</p>
@@ -205,7 +205,7 @@
 					<div class="col-lg-6 vcenter">
 						<div class="cta-heading-2">
 							<h2 class="mb15"><span class="ree-text rt40"> Enterprise Solutions </h2>
-							<p>Grafizen Paris is a leading enterprise web development company
+							<p>Grafizen Ventures is a leading enterprise web development company
 								specializing in building multi-tiered enterprise web solutions for
 								meet various business needs. We develop web portals
 								bespoke business solutions, e-commerce solutions, B2B applications and
