--- a/web-services.html
+++ b/web-services.html
@@ -176,10 +176,10 @@
 						<span class="sub-heading mb15" data-aos="fade-in" data-aos-delay="200">OUR SERVICES</span>
 						<h1 data-aos="fade-in" data-aos-delay="400"> Web development company.</h1>
 						<p class="mt30 h-light" data-aos="fade-in" data-aos-delay="600">
-							grafizen paris is a leading web design and development company in India, USA, Canada and
+							grafizen ventures is a leading web design and development company in India, USA, Canada and
 							UAE, offering best web development services to create bespoke websites, web applications,
 							web tools, etc.
-							Grafizen Paris is a leading web design and development company in India, USA, Canada and
+							Grafizen Ventures is a leading web design and development company in India, USA, Canada and
 							UAE, offering best development services
 							Web to create bespoke websites, web applications, web tools, etc.
 						</p>
@@ -235,8 +235,8 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="page-headings m-center">
-						<h3>Nous rendons la collaboration entre les personnes et l'interface plus intense et
-							passionnante.</h3>
+						<h3>We make the collaboration between people and the interface more intense and
+							exciting.</h3>
 						<a href="contactus.html" class="ree-btn  ree-btn-grdt2 mt40">Need a Designer <i
 								class="fas fa-arrow-right fa-btn"></i></a>
 					</div>
