--- a/contactus.html
+++ b/contactus.html
@@ -226,7 +226,7 @@
                     <input type="checkbox" class="custom-control-input" id="customCheck" name="example1"
                       checked="checked">
                     <label class="custom-control-label label-f-form" for="customCheck">I accept the<a
-                        href="javascript:void(0)">Terms & Conditions</a> by Grafizen Paris.</label>
+                        href="javascript:void(0)">Terms & Conditions</a> by Grafizen Ventures.</label>
                   </div>
                   <div class="fieldsets mt20"> <button type="submit" name="Nous Faire Parvenir"
                       class="ree-btn  ree-btn-grdt1 w-100">Send your request<i
