--- a/why-us.html
+++ b/why-us.html
@@ -207,7 +207,7 @@
 			<div class="row justify-content-center">
 			  <div class="col-lg-4">
 				<div class="sol-img m-mt30">
-				  <img src="images/others/team-business.jpg" alt="Grafizen Paris office" class="img-fluid">
+				  <img src="images/others/team-business.jpg" alt="Grafizen Ventures office" class="img-fluid">
 				</div>
 			  </div>
 			  <div class="col-lg-7">
