--- a/index.html
+++ b/index.html
@@ -366,13 +366,12 @@
       </div>
       <div class="row mt30">
         <div class="col-lg-3 col-sm-6 mt30" data-aos="fade-up" data-aos-delay="100">
-          <div class="ree-card bhv-tt">
+          <div class="ree-card bhv-tt hi-600">
             <div class="creative-img reebga"><img src="images/svg/webdesign.svg" alt="App Development"
                 class="img-fluid"></div>
             <div class="creative-cntnt">
               <h4 class="mb15"><a href="web-services.html"> Web development </a></h4>
               <p> Our web developers create custom web and web application solutions.
-
               </p>
               <a href="web-services.html" class="ree-card-link mt30">Read more <i
                   class="fas fa-arrow-right fa-btn"></i></a>
@@ -380,13 +379,12 @@
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 mt30" data-aos="fade-up" data-aos-delay="400">
-          <div class="ree-card bhv-tt">
+          <div class="ree-card bhv-tt hi-600">
             <div class="creative-img reebgb"><img src="images/svg/appdesign.svg" alt="App Development"
                 class="img-fluid"></div>
             <div class="creative-cntnt">
               <h4 class="mb15"><a href="uiux-services.html"> UI/UX design </a></h4>
               <p> Starting from the concept, information architecture, visual identity and UI/UX design,
-
               </p>
               <a href="uiux-services.html" class="ree-card-link mt30">Read more <i
                   class="fas fa-arrow-right fa-btn"></i></a>
@@ -395,24 +393,29 @@
         </div>
 
         <div class="col-lg-3 col-sm-6 mt30" data-aos="fade-up" data-aos-delay="700">
-          <div class="ree-card bhv-tt">
+          <div class="ree-card bhv-tt hi-600">
             <div class="creative-img reebgc"><img src="images/svg/content.svg" alt="App Development" class="img-fluid">
             </div>
             <div class="creative-cntnt">
               <h4 class="mb15"><a href="app-services.html"> Mobile application development </a></h4>
-              <p>B2B or B2E applications for enterprises, small businesses</p>
+              <p>B2B or B2E applications for enterprises, small businesses and startups, we
+
+              </p>
               <a href="app-services.html" class="ree-card-link mt30">Read more <i
                   class="fas fa-arrow-right fa-btn"></i></a>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 mt30" data-aos="fade-up" data-aos-delay="700">
-          <div class="ree-card bhv-tt">
+          <div class="ree-card bhv-tt hi-600">
             <div class="creative-img reebgd"><img src="images/svg/strategy.svg" alt="App Development" class="img-fluid">
             </div>
             <div class="creative-cntnt">
               <h4 class="mb15"><a href="hire-developer-services.html"> Hire dedicated developers </a></h4>
-              <p>Build your own software development team on your time</p>
+              <p>
+                Build your own software development team on your time and terms
+
+              </p>
               <a href="hire-developer-services.html" class="ree-card-link mt30">Read more <i
                   class="fas fa-arrow-right fa-btn"></i></a>
             </div>
